# ShAm

./: .gitignore  ChangeLog  MAINTAINERS  Makefile  README.md  installcommands.sh  meson.build  sham  sham.sh  sham.sh.x.c  shc
doc/developer/: build_instructions.md
doc/developer/code_comments/: source_code_comments.md
doc/man/: sham.1
doc/support/: contact_info.md
doc/user/: manual.md
doc/user/tutorials/: instalation.md
src/: compilesh.cpp  constructsh.cpp  input.sh  main.cpp  sham.h
